tests/src/frontend/typechecking/invalid/class_impl.sk
base class X
class Y() uses X
